--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .navbar a.active
  {
     /*color:rgb(36, 36, 240);*/
-    color:rgb(15, 15, 130);
+    color:red;
 
 }
 .home {
@@ -131,4 +131,5 @@ body {
     display: inline-block;
 
 }
+
 
