Update body background color to pink
Changed background color of body to pink.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     color:white;
 }
 body {
-    background-color: #1c082a;
+    background-color: pink;
     color:#ededed;
 }
 .header {
@@ -131,5 +131,6 @@ body {
     display: inline-block;
 
 }
+
 
 
