--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .navbar a.active
  {
     /*color:rgb(36, 36, 240);*/
-    color:red;
+    color:green;
 
 }
 .home {
@@ -131,6 +131,7 @@ body {
     display: inline-block;
 
 }
+
 
 
 
