Refactor style.css and adjust styles
Updated CSS styles and fixed formatting issues.

--- a/style.css
+++ b/style.css
@@ -125,12 +125,13 @@ body {
     right: 10px;
     width: 140px;
     height: 140;
-    background: red;
+    background: green;
 }
 .home-sci a{
     display: inline-block;
 
 }
+
 
 
 
