--- a/style.css
+++ b/style.css
@@ -289,6 +289,19 @@ menu li{
     top: -76px;
 
 }
+.linkeden{
+    width: 32px;
+    height: 32px;
+    border: 1px solid whitesmoke;
+    background-image: url('linkedin.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    left: 150px;
+    top: -76px;
+    
+}
 footer{
     width: 100%;
     height: 40px;
@@ -301,4 +314,5 @@ footer{
     z-index: -1;
     justify-content: center;
     align-items: center;
+
 }
