--- a/blog.css
+++ b/blog.css
@@ -62,11 +62,12 @@ header h3{
 .menu a:hover{
     color: pink;
     opacity: 0.6;
-    text-decoration:underline;
+    text-decoration:none;
 }
 menu li{
     list-style: none;
     color: white;
     display: flex;
     padding: 30px;
+
 }
