--- a/blog.css
+++ b/blog.css
@@ -72,7 +72,19 @@ menu li{
 
 }
 footer{
+     width: 100%;
+    height: 40px;
+    font-size: 20px;
+    color: white;
+    background-color: darkgrey;
+    display: flex;
+    position: absolute;
+    top: 1555px;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
     
 }
+
 
 
