--- a/blog.css
+++ b/blog.css
@@ -71,8 +71,60 @@ menu li{
     padding: 30px;
 
 }
+.github{
+    width: 35px;
+    height: 35px;
+    position: relative;
+    left: 53px;
+    border: 1px solid whitesmoke;
+    background-image: url('github.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: inline-flex;
+
+
+}
+.inst{
+    width: 35px;
+    height: 35px;
+    border: 1px solid whitesmoke;
+    background-image: url('instagram.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    left: 95px;
+    top: -40px;
+
+}
+.xtwit{
+    width: 32px;
+    height: 32px;
+    border: 1px solid whitesmoke;
+    background-image: url('twitter.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    left: 138px;
+    top: -76px;
+
+}
+.linkeden{
+    width: 29px;
+    height: 29px;
+    border: 1px solid whitesmoke;
+    background-image: url(linkedin.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    left: 176px;
+    top: -110px;;
+    
+}
 footer{
-     width: 100%;
+    width: 100%;
     height: 40px;
     font-size: 20px;
     color: white;
@@ -83,7 +135,7 @@ footer{
     z-index: -1;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 
